tests/ParseError/TypeMismatchErrorTest.php
<?php

declare(strict_types=1);

namespace Endermanbugzjfc\ConfigStruct\ParseError;

use PHPUnit\Framework\TestCase;

class TypeMismatchErrorTest extends TestCase
{

    public function testGetMessage()
    {

    }

    public function testGetExpectedTypes()
    {

    }
}
